--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <body>
 <H1>我叫余承江</h1>
     <p>我的学号是<span id =“studentnumber”> 18002090236 </span>
+        
+        <img src="matrix.png">
     </p>
 
 </body>
