--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <p>我的学号是<span id =“studentnumber”> 18002090236 </span>
         
         <img src="matrix.png">
+        <img src="matrix.png">
     </p>
 
 </body>
