--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <H1>我叫余承江</h1>
     <p>我的学号是<span id =“studentnumber”> 18002090236 </span>
         
-        <img src="matrix.png">
-        <img src="matrix.png">
+        <img src="matrix1.png">
+        <img src="matrix1.png">
     </p>
 
 </body>
