--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <body>
 <H1>我叫余承江</h1>
-    <p>我的学号是<span id =“studentnumber”> 18002090236 </span>
+    <p>我的学号是<span id =“studentnumber”> 18002090236 </span></p>
         
-        <img src="matrix1.png">
-        <img src="matrix1.png">
-    </p>
+        <img src="matrix1.png"><br>
+        <img src="Penguins.jpg">
+    
 
 </body>
 </html>
