--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <p>我的学号是<span id =“studentnumber”> 18002090236 </span></p>
         
         <img src="matrix1.png"><br>
-        <img src="Penguins.jpg">
+        <img  id="logo src="Penguins.jpg">
     
 
 </body>
