--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <html>
+    <head></head>
 <body>
-<<<<<<< HEAD
-=======
-<H1>我叫余承江</h1>
-    <p>我的学号是<span id =“studentnumber”> 18002090236 </span></p>
-        
-        <img src="matrix1.png"><br>
-        <img  id="logo" src="Penguins.jpg"  style="border-radius: 40px 40px 40px 40px">
-    
->>>>>>> f0358923f18966059dec98a896f8ec43ed48c7cd
-
-
 <H1>我叫<span id="myname"></span></h1>
     <p>我的学号是<span id =“mynumber”></span>
     </p>
