--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head></head>
 <body>
 <H1>我叫<span id="myname"></span></h1>
-    <p>我的学号是<span id =“mynumber”></span>
+    <p>我的学号是<span id ="mynumber"></span>
     </p>
         
     <img src="matrix.png" style="border-radius: 40px 40px 40px 40px">
